name:                discourse-to-gitter
version:             0.0.0.0
synopsis:            Send notifications from some Discourse instance to some Gitter chat
-- description:
homepage:            http://github.com/cblp/discourse-to-gitter#readme
license:             GPL-3
license-file:        LICENSE
author:              Yuriy Syrovetskiy
maintainer:          cblp@cblp.su
copyright:           2015 Yuriy Syrovetskiy
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >= 1.10

library
    build-depends:      aeson
                      , base
                      , errors
                      , lens
                      , lens-aeson
                      , monad-logger
                      , mtl
                      , text
                      , time
                      , unordered-containers
    default-extensions: FlexibleContexts
                        FlexibleInstances
                        OverloadedStrings
                        TemplateHaskell
    default-language:   Haskell2010
    exposed-modules:    Cache
                        Discourse
                        Lib
    ghc-options:        -Wall -Werror
    hs-source-dirs:     src
    other-modules:      Data.String.Extra

executable discourse-to-gitter-exe
    hs-source-dirs:   app
    main-is:          Main.hs
    ghc-options:      -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
    build-depends:    base
                    , discourse-to-gitter
                    , monad-logger
    default-language: Haskell2010

test-suite discourse-to-gitter-test
    build-depends:      aeson
                      , base
                      , bytestring
                      , discourse-to-gitter
                      , monad-logger
                      , mtl
                      , tasty
                      , tasty-hunit
                      , text
    default-extensions: RecordWildCards
    default-language:   Haskell2010
    ghc-options:        -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
    hs-source-dirs:     test
    main-is:            Spec.hs
    other-modules:      TestIO
    type:               exitcode-stdio-1.0

source-repository head
    type:     git
    location: https://github.com/cblp/discourse-to-gitter
