name:                discourse-to-gitter
version:             0.0.0.0
synopsis:            Send notifications from some Discourse instance to some Gitter chat
-- description:
homepage:            http://github.com/cblp/discourse-to-gitter#readme
license:             GPL-3
license-file:        LICENSE
author:              Yuriy Syrovetskiy
maintainer:          cblp@cblp.su
copyright:           2015 Yuriy Syrovetskiy
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >= 1.10

library
    build-depends:      aeson
                      , base
                      , bytestring
                      , errors
                      , exceptions
                      , lens
                      , lens-aeson
                      , mtl
                      , wreq
                      , text
                      , time
                      , unordered-containers
    default-extensions: FlexibleContexts
                        FlexibleInstances
                        GeneralizedNewtypeDeriving
                        MultiParamTypeClasses
                        OverloadedStrings
                        RecordWildCards
                        TemplateHaskell
    default-language:   Haskell2010
    exposed-modules:    Cache
                        Config
                        Discourse
                        Gitter
                        Gitter.Monad
                        Gitter.Types
                        Lib
    ghc-options:        -Wall -Werror
    hs-source-dirs:     src
    other-modules:      Control.Monad.Trans.X
                        Data.String.X

executable discourse-to-gitter-exe
    hs-source-dirs:     app
    main-is:            Main.hs
    ghc-options:        -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
    build-depends:      aeson
                      , base
                      , bytestring
                      , discourse-to-gitter
                      , lens
                      , mtl
                      , text
    default-extensions: OverloadedStrings
                        RecordWildCards
                        TemplateHaskell
    default-language:   Haskell2010

test-suite discourse-to-gitter-test
    build-depends:      aeson
                      , base
                      , bytestring
                      , discourse-to-gitter
                      , mtl
                      , tasty
                      , tasty-hunit
                      , text
                      , time
    default-extensions: OverloadedLists
                        OverloadedStrings
                        RecordWildCards
    default-language:   Haskell2010
    ghc-options:        -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
    hs-source-dirs:     test
    main-is:            Spec.hs
    other-modules:      TestIO
    type:               exitcode-stdio-1.0

source-repository head
    type:     git
    location: https://github.com/cblp/discourse-to-gitter
