name:                notifaika
version:             0.0.0.0
synopsis:            Send notifications from some Discourse instance to some Gitter chat
-- description:
homepage:            http://github.com/cblp/notifaika#readme
license:             GPL-3
license-file:        LICENSE
author:              Yuriy Syrovetskiy
maintainer:          cblp@cblp.su
copyright:           2015 Yuriy Syrovetskiy
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >= 1.10

library
    build-depends:      aeson
                      , base
                      , bytestring
                      , containers
                      , errors
                      , exceptions
                      , lens
                      , lens-aeson
                      , monad-control
                      , mtl
                      , persistent
                      , persistent-sqlite
                      , persistent-template
                      , text
                      , time
                      , transformers
                      , unordered-containers
                      , wreq
                      , xml-lens
                      , xml-conduit
    default-extensions: FlexibleContexts
                        FlexibleInstances
                        GADTs
                        GeneralizedNewtypeDeriving
                        MultiParamTypeClasses
                        OverloadedStrings
                        RankNTypes
                        RecordWildCards
                        StandaloneDeriving
                        TemplateHaskell
                        TypeFamilies
    default-language:   Haskell2010
    exposed-modules:    Data.Aeson.X
                        Notifaika
                        Notifaika.Cache
                        Notifaika.Cache.Persist
                        Notifaika.Config
                        Notifaika.Discourse
                        Notifaika.EventSource
                        Notifaika.Gitter
                        Notifaika.Gitter.Monad
                        Notifaika.Gitter.Types
                        Notifaika.RSS
                        Notifaika.RSS.Types
                        Notifaika.Types
    ghc-options:        -Wall -Werror
    hs-source-dirs:     src
    other-modules:      Control.Monad.Trans.X
                        Data.String.X

executable notifaika
    hs-source-dirs:     app
    main-is:            Main.hs
    ghc-options:        -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
    build-depends:      aeson
                      , base
                      , bytestring
                      , notifaika
                      , lens
                      , mtl
                      , text
    default-extensions: OverloadedStrings
                        RecordWildCards
                        TemplateHaskell
    default-language:   Haskell2010

test-suite test
    build-depends:      aeson
                      , base
                      , bytestring
                      , containers
                      , directory
                      , notifaika
                      , exceptions
                      , filepath
                      , MissingH
                      , mtl
                      , tasty
                      , tasty-hunit
                      , temporary
                      , text
                      , time
    default-extensions: OverloadedLists
                        OverloadedStrings
                        RecordWildCards
    default-language:   Haskell2010
    ghc-options:        -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
    hs-source-dirs:     test
    main-is:            Spec.hs
    other-modules:      TestIO
    type:               exitcode-stdio-1.0

source-repository head
    type:     git
    location: https://github.com/cblp/notifaika
