name:                notifaika
version:             0.0.0.0
synopsis:            Send notifications from some Discourse instance to some Gitter chat
homepage:            http://github.com/cblp/notifaika#readme
license:             GPL-3
license-file:        LICENSE
author:              Yuriy Syrovetskiy
maintainer:          cblp@cblp.su
copyright:           2015 Yuriy Syrovetskiy
category:            Web
build-type:          Simple
cabal-version:       >= 1.10

library
    build-depends:      aeson
                      , base
                      , bytestring
                      , containers
                      , errors
                      , exceptions
                      , gitter
                      , lens
                      , monad-control
                      , mtl
                      , persistent
                      , persistent-sqlite
                      , persistent-template
                      , text
                      , time
                      , transformers
                      , unordered-containers
                      , wreq
                      , xml-lens
                      , xml-conduit
    default-language:   Haskell2010
    exposed-modules:    Data.Aeson.X
                        Notifaika
                        Notifaika.Cache
                        Notifaika.Cache.Sqlite
                        Notifaika.Config
                        Notifaika.Core
                        Notifaika.Discourse
                        Notifaika.EventSource
                        Notifaika.RSS
                        Notifaika.RSS.Types
                        Notifaika.Types
    ghc-options:        -Wall -Werror
    hs-source-dirs:     src
    other-modules:      Data.String.X

executable notifaika
    hs-source-dirs:     app
    main-is:            Main.hs
    ghc-options:        -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
    build-depends:      aeson
                      , base
                      , bytestring
                      , notifaika
                      , lens
                      , mtl
                      , text
    default-extensions: OverloadedStrings
                        RecordWildCards
                        TemplateHaskell
    default-language:   Haskell2010

test-suite test
    build-depends:      aeson
                      , base
                      , bytestring
                      , containers
                      , directory
                      , exceptions
                      , filepath
                      , gitter
                      , MissingH
                      , mtl
                      , notifaika
                      , tasty
                      , tasty-hunit
                      , temporary
                      , text
                      , time
                      , xml-conduit
    default-extensions: OverloadedLists
                        OverloadedStrings
                        RecordWildCards
    default-language:   Haskell2010
    ghc-options:        -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
    hs-source-dirs:     test
    main-is:            Spec.hs
    other-modules:      TestIO
    type:               exitcode-stdio-1.0

source-repository head
    type:     git
    location: https://github.com/cblp/notifaika
