name:           gitter
version:        0.0.0.0
build-type:     Simple
cabal-version:  >= 1.10

library
    build-depends:      aeson
                      , base
                      , bytestring
                      , exceptions
                      , lens
                      , lens-aeson
                      , mtl
                      , text
                      , wreq
    default-extensions: GeneralizedNewtypeDeriving
                        OverloadedStrings
                        RecordWildCards
                        StandaloneDeriving
                        TemplateHaskell
    default-language:   Haskell2010
    exposed-modules:    Network.Gitter
                        Network.Gitter.Monad
                        Network.Gitter.Types
    hs-source-dirs:     src
    other-modules:      Control.Monad.Trans.X
                        Data.String.X
